[workspace]
members = ["utils", "lessons/3"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
bril-rs = { path = "bril/bril-rs", features = [
  "memory",
  "float",
  "ssa",
  "speculate",
  "position",
  "import",
  "char",
] }
utils = { version = "0.0.1", path = "utils" }
serde = "1.0.217"
derivative = "2.2.0"
log = "0.4"
argh = "0.1.13"
simple_logger = "5.0.0"
