[workspace]
members = ["utils", "lessons/3", "lessons/4", "lessons/5", "lessons/6"]
resolver = "2"
exclude = ["bril"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
bril-rs = { path = "bril/bril-rs", features = [
  "memory",
  "float",
  "ssa",
  "speculate",
  "position",
  "import",
  "char",
] }
utils = { version = "0.0.1", path = "utils" }
serde = "1.0.217"
derivative = "2.2.0"
log = "0.4"
argh = "0.1.13"
simple_logger = "5.0.0"
graphviz-rust = "0.9.3"
itertools = "0.14.0"
