[workspace]
members = [
  "utils",
  "lessons/3",
  "lessons/4",
  "lessons/5",
  "lessons/6",
  "lessons/12",
]
resolver = "2"
exclude = ["bril"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
bril-rs = { git = "https://github.com/sampsyo/bril", features = [
  "memory",
  "float",
  "ssa",
  "speculate",
  "position",
  "import",
  "char",
], version = "0.1.0" }
brilirs = { git = "https://github.com/sampsyo/bril", version = "0.1.0" }
bril2json = { git = "https://github.com/sampsyo/bril", version = "0.1.0" }
utils = { version = "0.0.1", path = "utils" }
lesson-3 = { version = "0.0.1", path = "lessons/3" }
serde = "1.0.217"
derivative = "2.2.0"
log = "0.4"
argh = "0.1.13"
simple_logger = "5.0.0"
graphviz-rust = "0.9.3"
itertools = "0.14.0"
plotters = "0.3.7"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.5"
