[package]
name = "utils"
version = "0.0.1"
edition.workspace = true

[dependencies]
bril-rs.workspace = true
derivative.workspace = true
log.workspace = true
argh.workspace = true
simple_logger.workspace = true
graphviz-rust.workspace = true
itertools.workspace = true
plotters.workspace = true
linked_hash_set.workspace = true
linked-hash-map.workspace = true
